--- a/dev/tutorials/l_master.ipynb
+++ b/dev/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9d39a6c4",
+   "id": "d45d0010",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3fb7f2c",
+   "id": "2e3d9cf4",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0958c32f",
+   "id": "a4855295",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63c9a99b",
+   "id": "8fccd9be",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f6ae8e4",
+   "id": "94d31c21",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e588333",
+   "id": "97d44256",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6b464821",
+   "id": "02b6119a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-08T11:38:36.811915Z",
-     "iopub.status.busy": "2025-09-08T11:38:36.811667Z",
-     "iopub.status.idle": "2025-09-08T11:38:39.904003Z",
-     "shell.execute_reply": "2025-09-08T11:38:39.903440Z"
+     "iopub.execute_input": "2025-09-23T17:38:03.511610Z",
+     "iopub.status.busy": "2025-09-23T17:38:03.511440Z",
+     "iopub.status.idle": "2025-09-23T17:38:06.930051Z",
+     "shell.execute_reply": "2025-09-23T17:38:06.929439Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6ee2ca7",
+   "id": "c494c6b3",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a10b2aa1",
+   "id": "a87ad602",
    "metadata": {},
    "source": [
     "1. a bare Hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c64554b5",
+   "id": "d0f63731",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7518b85",
+   "id": "33df5f05",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c827c3ed",
+   "id": "3e1fa627",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54cfd7ec",
+   "id": "d7bcc140",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e278ae0",
+   "id": "348ac68a",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31b619e6",
+   "id": "a98e079b",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "baeae5e0",
+   "id": "18289dab",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-08T11:38:39.906175Z",
-     "iopub.status.busy": "2025-09-08T11:38:39.905904Z",
-     "iopub.status.idle": "2025-09-08T11:38:41.968979Z",
-     "shell.execute_reply": "2025-09-08T11:38:41.968317Z"
+     "iopub.execute_input": "2025-09-23T17:38:06.932228Z",
+     "iopub.status.busy": "2025-09-23T17:38:06.931917Z",
+     "iopub.status.idle": "2025-09-23T17:38:09.327103Z",
+     "shell.execute_reply": "2025-09-23T17:38:09.326513Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c096739e",
+   "id": "cce860e3",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f85cd4d4",
+   "id": "20779f3f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-08T11:38:41.970898Z",
-     "iopub.status.busy": "2025-09-08T11:38:41.970723Z",
-     "iopub.status.idle": "2025-09-08T11:38:41.974102Z",
-     "shell.execute_reply": "2025-09-08T11:38:41.973536Z"
+     "iopub.execute_input": "2025-09-23T17:38:09.328989Z",
+     "iopub.status.busy": "2025-09-23T17:38:09.328799Z",
+     "iopub.status.idle": "2025-09-23T17:38:09.332697Z",
+     "shell.execute_reply": "2025-09-23T17:38:09.331973Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef272f3d",
+   "id": "ce0a3e45",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5307116f",
+   "id": "8c17111a",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78ecc694",
+   "id": "6bb21870",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f2e454e",
+   "id": "8eb05304",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2a670595",
+   "id": "23977c98",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-08T11:38:41.975765Z",
-     "iopub.status.busy": "2025-09-08T11:38:41.975591Z",
-     "iopub.status.idle": "2025-09-08T11:38:42.020075Z",
-     "shell.execute_reply": "2025-09-08T11:38:42.019507Z"
+     "iopub.execute_input": "2025-09-23T17:38:09.334535Z",
+     "iopub.status.busy": "2025-09-23T17:38:09.334349Z",
+     "iopub.status.idle": "2025-09-23T17:38:09.381897Z",
+     "shell.execute_reply": "2025-09-23T17:38:09.381361Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68451102",
+   "id": "ce1e4c7d",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "52fa9821",
+   "id": "0ab0c109",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-08T11:38:42.021774Z",
-     "iopub.status.busy": "2025-09-08T11:38:42.021607Z",
-     "iopub.status.idle": "2025-09-08T11:38:42.089507Z",
-     "shell.execute_reply": "2025-09-08T11:38:42.088889Z"
+     "iopub.execute_input": "2025-09-23T17:38:09.383838Z",
+     "iopub.status.busy": "2025-09-23T17:38:09.383649Z",
+     "iopub.status.idle": "2025-09-23T17:38:09.455464Z",
+     "shell.execute_reply": "2025-09-23T17:38:09.454805Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d8efe5d",
+   "id": "09dd893a",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8af296d",
+   "id": "26ee41ea",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6f6093eb",
+   "id": "f89969ad",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-08T11:38:42.091314Z",
-     "iopub.status.busy": "2025-09-08T11:38:42.091117Z",
-     "iopub.status.idle": "2025-09-08T11:38:42.118755Z",
-     "shell.execute_reply": "2025-09-08T11:38:42.118231Z"
+     "iopub.execute_input": "2025-09-23T17:38:09.457399Z",
+     "iopub.status.busy": "2025-09-23T17:38:09.457201Z",
+     "iopub.status.idle": "2025-09-23T17:38:09.486197Z",
+     "shell.execute_reply": "2025-09-23T17:38:09.485650Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3490a365",
+   "id": "18254c29",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d9ed093",
+   "id": "2757838f",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f93eee4e",
+   "id": "fe02fb85",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "078b82e1",
+   "id": "0e084fb8",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08140494",
+   "id": "d6b4f5ea",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "035fc771",
+   "id": "6380c879",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-08T11:38:42.120695Z",
-     "iopub.status.busy": "2025-09-08T11:38:42.120516Z",
-     "iopub.status.idle": "2025-09-08T11:38:42.124684Z",
-     "shell.execute_reply": "2025-09-08T11:38:42.124019Z"
+     "iopub.execute_input": "2025-09-23T17:38:09.488137Z",
+     "iopub.status.busy": "2025-09-23T17:38:09.487927Z",
+     "iopub.status.idle": "2025-09-23T17:38:09.493419Z",
+     "shell.execute_reply": "2025-09-23T17:38:09.492737Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adaaf9b4",
+   "id": "aad2055d",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a8037a5f",
+   "id": "ed368e4b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-08T11:38:42.126349Z",
-     "iopub.status.busy": "2025-09-08T11:38:42.126184Z",
-     "iopub.status.idle": "2025-09-08T11:38:42.129024Z",
-     "shell.execute_reply": "2025-09-08T11:38:42.128483Z"
+     "iopub.execute_input": "2025-09-23T17:38:09.495103Z",
+     "iopub.status.busy": "2025-09-23T17:38:09.494899Z",
+     "iopub.status.idle": "2025-09-23T17:38:09.497830Z",
+     "shell.execute_reply": "2025-09-23T17:38:09.497255Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b128a78b",
+   "id": "f8b6624d",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c33f626c",
+   "id": "81bd455a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-08T11:38:42.130621Z",
-     "iopub.status.busy": "2025-09-08T11:38:42.130424Z",
-     "iopub.status.idle": "2025-09-08T11:38:44.736814Z",
-     "shell.execute_reply": "2025-09-08T11:38:44.736291Z"
+     "iopub.execute_input": "2025-09-23T17:38:09.499524Z",
+     "iopub.status.busy": "2025-09-23T17:38:09.499357Z",
+     "iopub.status.idle": "2025-09-23T17:38:12.187261Z",
+     "shell.execute_reply": "2025-09-23T17:38:12.186609Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d98ebcd0",
+   "id": "109c5c51",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e28ede8",
+   "id": "2c0fee81",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3262526f",
+   "id": "290723f5",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2843601",
+   "id": "7408bf23",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "080c9cf3",
+   "id": "fc7ee8b5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-08T11:38:44.738722Z",
-     "iopub.status.busy": "2025-09-08T11:38:44.738534Z",
-     "iopub.status.idle": "2025-09-08T11:38:44.742194Z",
-     "shell.execute_reply": "2025-09-08T11:38:44.741497Z"
+     "iopub.execute_input": "2025-09-23T17:38:12.189426Z",
+     "iopub.status.busy": "2025-09-23T17:38:12.189213Z",
+     "iopub.status.idle": "2025-09-23T17:38:12.193039Z",
+     "shell.execute_reply": "2025-09-23T17:38:12.192329Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7fbb688a8e00>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f4974ac2e80>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ea57ff6",
+   "id": "163f2561",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3c92ef9",
+   "id": "56f0ff34",
    "metadata": {},
    "source": [
     "## Postprocessing"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cd9151d",
+   "id": "f178c18a",
    "metadata": {},
    "source": [
     "You can define custom postprocessing. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3eac941",
+   "id": "d779ba83",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e97c68fa",
+   "id": "516a498e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-08T11:38:44.743996Z",
-     "iopub.status.busy": "2025-09-08T11:38:44.743821Z",
-     "iopub.status.idle": "2025-09-08T11:38:44.746855Z",
-     "shell.execute_reply": "2025-09-08T11:38:44.746275Z"
+     "iopub.execute_input": "2025-09-23T17:38:12.194866Z",
+     "iopub.status.busy": "2025-09-23T17:38:12.194683Z",
+     "iopub.status.idle": "2025-09-23T17:38:12.197920Z",
+     "shell.execute_reply": "2025-09-23T17:38:12.197272Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "09229105",
+   "id": "0ce1f03c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-09-08T11:38:44.748477Z",
-     "iopub.status.busy": "2025-09-08T11:38:44.748288Z",
-     "iopub.status.idle": "2025-09-08T11:38:45.822765Z",
-     "shell.execute_reply": "2025-09-08T11:38:45.822105Z"
+     "iopub.execute_input": "2025-09-23T17:38:12.199629Z",
+     "iopub.status.busy": "2025-09-23T17:38:12.199444Z",
+     "iopub.status.idle": "2025-09-23T17:38:13.280057Z",
+     "shell.execute_reply": "2025-09-23T17:38:13.279430Z"
     }
    },
    "outputs": [
